--- a/task05/app/lambdas/api_handler/lambda_config.json
+++ b/task05/app/lambdas/api_handler/lambda_config.json
@@ -1,19 +1,20 @@
 {
   "version": "1.0",
-  "name": "api_handler",
-  "func_name": "lambdas/api_handler/index.handler",
+  "name": "demo",
+  "func_name": "handler.lambda_handler",
   "resource_type": "lambda",
-  "iam_role_name": "api_handler-role",
-  "runtime": "nodejs20.x",
+  "iam_role_name": "demo-role",
+  "runtime": "python3.10",
   "memory": 128,
   "timeout": 100,
-  "lambda_path": "lambdas\\api_handler",
+  "lambda_path": "lambdas\\demo",
   "dependencies": [],
   "event_sources": [],
-  "env_variables": {},
-  "publish_version": true,
-  "alias": "${lambdas_alias_name}",
+  "env_variables": {
+  "demo_table_name": "${demo_table}"
+  },
+  "publish_version": false,
   "url_config": {},
   "ephemeral_storage": 512,
-  "tags": {}
+  "layers": []
 }
